--- a/recipe-book-api/config/database.yml
+++ b/recipe-book-api/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: Tiger315!
   socket: /var/run/mysqld/mysqld.sock
 
 development:
