--- a/recipe-book-api/config/database.yml
+++ b/recipe-book-api/config/database.yml
@@ -10,11 +10,11 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
+  adapter: postgresql
+  encoding: UTF8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: Tiger315!
+  username: kevin
+  password: rue18
   socket: /var/run/mysqld/mysqld.sock
 
 development:
