--- a/recipe-book-api/Procfile
+++ b/recipe-book-api/Procfile
@@ -1,2 +1,2 @@
-web: PORT=3000 yarn --cwd recipe-book-frontend start
-api: API=3001 bundle exec rails s -p 3001
+web: bundle exec rails s
+release: bin/rake db:migrate
