--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "license": "MIT",
     "engines": {
         "node": "12.13.1",
+        "npm": "6.14.2",
         "yarn": "1.21.1"
     },
     "scripts": {
